--- a/css/styles.css
+++ b/css/styles.css
@@ -19,13 +19,49 @@ border-radius: 4px;*/
   --background-color: #f4f4fd;
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding-left: 0;
+}
+
+img {
+  display: block;
+}
+
 .page {
   font-family: "Roboto", sans-serif;
   background: var(--main-text-color);
   color: var(--main-title-color);
 }
+.container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  max-width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+  outline: 2px solid red;
 
+  box-sizing: border-box;
+}
+
+.page-header {
+}
 .list {
+  display: flex;
+  align-items: center;
+
   list-style: none;
   text-decoration: none;
 }
@@ -53,29 +89,34 @@ border-radius: 4px;*/
   font-weight: 800;
   font-size: 18px;
   line-height: 1.33;
-  display: flex;
-  align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--second-title-color);
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: auto;
 }
 .span {
-  font-family: "Raleway", sans-serif;
-  font-style: normal;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.33;
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
   flex: none;
   order: 0;
   flex-grow: 0;
   color: var(--accent-color);
 }
-
+.nav {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+}
+.site-nav {
+  display: flex;
+  align-items: center;
+  margin-left: 76px;
+}
 .site-nav .link {
+  display: block;
+
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -87,7 +128,15 @@ border-radius: 4px;*/
   flex-grow: 0;
   color: var(--second-title-color);
 }
+
+.site-nav .item + .item {
+  margin-left: 40px;
+}
 .site-address {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -95,6 +144,9 @@ border-radius: 4px;*/
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--main-title-color);
+}
+.site-address .item + .item {
+  margin-left: 40px;
 }
 .site-nav .link:hover,
 .site-nav .link:focus {
@@ -118,6 +170,7 @@ border-radius: 4px;*/
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
+  padding: 188px 300px 292px;
 }
 .hero-btn-activ {
   cursor: pointer;
@@ -133,6 +186,7 @@ border-radius: 4px;*/
   flex: none;
   order: 0;
   flex-grow: 0;
+
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -140,6 +194,17 @@ border-radius: 4px;*/
   gap: 10px;
   color: var(--main-text-color);
   background: var(--main-btn-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
+  position: absolute;
+
+  left: 526px;
+  top: 356px;
+  margin-top: 48px;
+}
+
+.btn {
 }
 .hero-text-btn {
   color: var(--main-text-color);
@@ -196,6 +261,14 @@ border-radius: 4px;*/
 .section {
   color: var(--main-text-color);
 }
+.section .item {
+  display: flex;
+  align-items: center;
+}
+.section .item + .item {
+  margin-left: 24px;
+}
+
 .section-link {
   font-family: "Roboto", sans-serif;
   font-style: normal;
@@ -219,18 +292,61 @@ border-radius: 4px;*/
   flex: none;
   order: 0;
   flex-grow: 0;
+  padding-top: 120px;
+  padding-bottom: 8px;
 }
 
+/*Section Out Team*/
+
 .section-pre-title {
+  position: absolute;
+
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 36px;
-  line-height: 1, 11;
+  line-height: 1.11;
   text-align: center;
+  display: block;
+
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--second-title-color);
+  padding-top: 120px;
+  padding-bottom: 72px;
+}
+
+.section-team-title {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+
+  color: var(--second-title-color);
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  padding-top: 32px;
+  padding-bottom: 8px;
+}
+.section-team-link {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: var(--main-title-color);
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+.list .section-list + .section-list {
+  margin-left: 24px;
 }
 .section-item {
   background: var(--background-color);
@@ -242,6 +358,17 @@ border-radius: 4px;*/
   background: var(--main-text-color);
   border: 1px solid var(--second-btn-color);
 }
+
+.section-portfolio {
+  display: flex;
+  flex-wrap: wrap;
+}
+.section-portfolio .section-list-item + .section-list-item {
+  margin-left: 24px;
+}
+
+/*Footer*/
+
 .footer {
   background: var(--second-title-color);
 }
@@ -256,6 +383,8 @@ border-radius: 4px;*/
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--background-color);
+  padding-top: 100px;
+  padding-bottom: 188px;
 }
 .footer-span {
   font-family: "Raleway", sans-serif;
@@ -272,6 +401,11 @@ border-radius: 4px;*/
   order: 0;
   flex-grow: 0;
 }
+
+.footer-wrap {
+  display: flex;
+  justify-content: space-between;
+}
 .footer-link {
   font-family: "Roboto", sans-serif;
   font-style: normal;
@@ -280,6 +414,8 @@ border-radius: 4px;*/
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--second-btn-color);
+  width: calc((100%-60px) / 4);
+  padding-top: 16px;
 }
 .visually-hidden {
   position: absolute;
