--- a/css/styles.css
+++ b/css/styles.css
@@ -68,10 +68,10 @@ img {
 }
 
 .page-header {
+  border-bottom: 1px solid var(--second-btn-color);
 }
 .list {
   display: flex;
-  align-items: center;
 
   list-style: none;
   text-decoration: none;
@@ -199,7 +199,7 @@ img {
 .hero-btn-activ {
   cursor: pointer;
 
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -237,6 +237,7 @@ img {
   align-items: center;
   text-align: center;
   letter-spacing: 0.04em;
+
   color: var(--main-text-color);
   flex: none;
   order: 0;
@@ -257,12 +258,13 @@ img {
   align-items: center;
   text-align: center;
   letter-spacing: 0.04em;
+  border: none;
   color: var(--accent-color);
   flex: none;
   order: 0;
   flex-grow: 0;
   background: var(--second-btn-color);
-  margin-bottom: 72px;
+  padding: 12px 24px;
 }
 
 .button-primary .btn:hover,
@@ -359,6 +361,7 @@ img {
 .section-pre-list {
   display: flex;
   justify-content: center;
+  margin-bottom: 72px;
 }
 .gallery {
   padding: 32px 0 32px 16px;
@@ -368,6 +371,7 @@ img {
 .section-portfolio {
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: -48px;
 }
 .section-portfolio .section-list-item + .section-list-item {
   margin-left: 24px;
@@ -419,5 +423,4 @@ img {
   letter-spacing: 0.02em;
   color: var(--second-btn-color);
   width: calc((100%-60px) / 4);
-  margin-bottom: 16px;
 }
